--- a/archives/toutiao-search/2024-03-21.md
+++ b/archives/toutiao-search/2024-03-21.md
@@ -1,53 +1,67 @@
 # 2024-03-21
 
-共 277 条
+共 288 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 21 2024 18:00:44 GMT+0800 (China Standard Time) -->
-1. [菲方34人非法登上铁线礁 中方回应](https://so.toutiao.com/search?keyword=菲方34人非法登上铁线礁+中方回应)
+<!-- 最后更新时间 Thu Mar 21 2024 19:00:42 GMT+0800 (China Standard Time) -->
+1. [预制菜不允许添加防腐剂](https://so.toutiao.com/search?keyword=预制菜不允许添加防腐剂)
 1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
 1. [用课本封面的方式打开春耕画卷](https://so.toutiao.com/search?keyword=用课本封面的方式打开春耕画卷)
-1. [乌首都遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=乌首都遭俄军数枚高超音速导弹袭击)
+1. [菲方34人非法登上铁线礁 中方回应](https://so.toutiao.com/search?keyword=菲方34人非法登上铁线礁+中方回应)
 1. [“重庆姐弟坠楼案”孩子母亲患癌](https://so.toutiao.com/search?keyword=“重庆姐弟坠楼案”孩子母亲患癌)
-1. [俄称已消灭147名抵乌的法国雇佣兵](https://so.toutiao.com/search?keyword=俄称已消灭147名抵乌的法国雇佣兵)
-1. [螺蛳粉塌房 被发现有增臭剂](https://so.toutiao.com/search?keyword=螺蛳粉塌房+被发现有增臭剂)
-1. [吴彦祖晒与贾玲合影](https://so.toutiao.com/search?keyword=吴彦祖晒与贾玲合影)
+1. [女子问丈夫要2万生活费被拒后争执](https://so.toutiao.com/search?keyword=女子问丈夫要2万生活费被拒后争执)
+1. [乌首都遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=乌首都遭俄军数枚高超音速导弹袭击)
 1. [3名掉化粪池离世小孩为幼儿园学生](https://so.toutiao.com/search?keyword=3名掉化粪池离世小孩为幼儿园学生)
-1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
+1. [媒体：警惕医学生自杀出现维特效应](https://so.toutiao.com/search?keyword=媒体：警惕医学生自杀出现维特效应)
+1. [螺蛳粉塌房 被发现有增臭剂](https://so.toutiao.com/search?keyword=螺蛳粉塌房+被发现有增臭剂)
 1. [遇害学生父亲尸检反复念叨：儿啊别怕](https://so.toutiao.com/search?keyword=遇害学生父亲尸检反复念叨：儿啊别怕)
 1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
 1. [成都官方辟谣高中老师殴打学生](https://so.toutiao.com/search?keyword=成都官方辟谣高中老师殴打学生)
+1. [医院称2名医学生先后自杀情况属实](https://so.toutiao.com/search?keyword=医院称2名医学生先后自杀情况属实)
 1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
-1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
 1. [国足vs新加坡比分预测](https://so.toutiao.com/search?keyword=国足vs新加坡比分预测)
-1. [女子问丈夫要2万生活费被拒后争执](https://so.toutiao.com/search?keyword=女子问丈夫要2万生活费被拒后争执)
-1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
-1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
-1. [沙利文访乌克兰未提军援时间表](https://so.toutiao.com/search?keyword=沙利文访乌克兰未提军援时间表)
-1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
+1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
+1. [吴彦祖晒与贾玲合影](https://so.toutiao.com/search?keyword=吴彦祖晒与贾玲合影)
 1. [新郎被朋友捆电线杆上倒啤酒酱油](https://so.toutiao.com/search?keyword=新郎被朋友捆电线杆上倒啤酒酱油)
 1. [柳州螺蛳粉协会秘书长谈增臭剂](https://so.toutiao.com/search?keyword=柳州螺蛳粉协会秘书长谈增臭剂)
-1. [6岁女孩确诊甲状腺癌](https://so.toutiao.com/search?keyword=6岁女孩确诊甲状腺癌)
-1. [苹果新店赠品礼盒二手价卖到399元](https://so.toutiao.com/search?keyword=苹果新店赠品礼盒二手价卖到399元)
-1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
-1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
-1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
+1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
 1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
-1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
+1. [螺蛳粉被曝用增臭剂？多家品牌回应](https://so.toutiao.com/search?keyword=螺蛳粉被曝用增臭剂？多家品牌回应)
+1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
+1. [足协官方提前显示国足0-0新加坡](https://so.toutiao.com/search?keyword=足协官方提前显示国足0-0新加坡)
+1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
 1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
-1. [赵丽颖林更新拍与凤行大结局哭懵了](https://so.toutiao.com/search?keyword=赵丽颖林更新拍与凤行大结局哭懵了)
-1. [俄军称摧毁乌克兰一外国雇佣兵基地](https://so.toutiao.com/search?keyword=俄军称摧毁乌克兰一外国雇佣兵基地)
+1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
+1. [6岁女孩确诊甲状腺癌](https://so.toutiao.com/search?keyword=6岁女孩确诊甲状腺癌)
 1. [台退将谈台军将在金门实弹射击](https://so.toutiao.com/search?keyword=台退将谈台军将在金门实弹射击)
+1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
+1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
+1. [俄称已消灭147名抵乌的法国雇佣兵](https://so.toutiao.com/search?keyword=俄称已消灭147名抵乌的法国雇佣兵)
+1. [当你有个梦想做教育局局长的学生](https://so.toutiao.com/search?keyword=当你有个梦想做教育局局长的学生)
 1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
-1. [理想发布全员信反思MEGA问题](https://so.toutiao.com/search?keyword=理想发布全员信反思MEGA问题)
+1. [2名医学生先后自杀？校方回应](https://so.toutiao.com/search?keyword=2名医学生先后自杀？校方回应)
 1. [儿子运动步数为0 母亲报警救其一命](https://so.toutiao.com/search?keyword=儿子运动步数为0+母亲报警救其一命)
+1. [费翔为拍摄新电影把胡子刮了](https://so.toutiao.com/search?keyword=费翔为拍摄新电影把胡子刮了)
+1. [美称藏南地区系印度领土 中方驳斥](https://so.toutiao.com/search?keyword=美称藏南地区系印度领土+中方驳斥)
+1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
+1. [央行三周内两次提及降准仍有空间](https://so.toutiao.com/search?keyword=央行三周内两次提及降准仍有空间)
+1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
+1. [《谢谢你温暖我》聚焦渐冻症](https://so.toutiao.com/search?keyword=《谢谢你温暖我》聚焦渐冻症)
+1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
+1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
+1. [理想发布全员信反思MEGA问题](https://so.toutiao.com/search?keyword=理想发布全员信反思MEGA问题)
+1. [赵丽颖林更新拍与凤行大结局哭懵了](https://so.toutiao.com/search?keyword=赵丽颖林更新拍与凤行大结局哭懵了)
+1. [中方回应美考虑制裁华为芯片供应商](https://so.toutiao.com/search?keyword=中方回应美考虑制裁华为芯片供应商)
+1. [英国2名空姐嘲讽中国人被开除](https://so.toutiao.com/search?keyword=英国2名空姐嘲讽中国人被开除)
+1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
+1. [沙利文访乌克兰未提军援时间表](https://so.toutiao.com/search?keyword=沙利文访乌克兰未提军援时间表)
+1. [苹果新店赠品礼盒二手价卖到399元](https://so.toutiao.com/search?keyword=苹果新店赠品礼盒二手价卖到399元)
+1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
+1. [俄军称摧毁乌克兰一外国雇佣兵基地](https://so.toutiao.com/search?keyword=俄军称摧毁乌克兰一外国雇佣兵基地)
 1. [这些睡眠误区不要踩](https://so.toutiao.com/search?keyword=这些睡眠误区不要踩)
 1. [越南国家主席为何三年换了三个](https://so.toutiao.com/search?keyword=越南国家主席为何三年换了三个)
-1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
-1. [美称藏南地区系印度领土 中方驳斥](https://so.toutiao.com/search?keyword=美称藏南地区系印度领土+中方驳斥)
 1. [武氏映春出任越南国家代主席](https://so.toutiao.com/search?keyword=武氏映春出任越南国家代主席)
 1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
-1. [榆林一女中学生遭多名同学围殴](https://so.toutiao.com/search?keyword=榆林一女中学生遭多名同学围殴)
 1. [雷军：SU7标准版配置远超Model 3](https://so.toutiao.com/search?keyword=雷军：SU7标准版配置远超Model+3)
 1. [90后小伙坚守花鸟灯塔7年](https://so.toutiao.com/search?keyword=90后小伙坚守花鸟灯塔7年)
 1. [外交部驳斥美军将领涉台言论](https://so.toutiao.com/search?keyword=外交部驳斥美军将领涉台言论)
@@ -80,7 +94,6 @@
 1. [女孩投重疾险后患糖尿病被拒保](https://so.toutiao.com/search?keyword=女孩投重疾险后患糖尿病被拒保)
 1. [警方回应山东小钺钺被利器重伤](https://so.toutiao.com/search?keyword=警方回应山东小钺钺被利器重伤)
 1. [山东济南市政府原参事孙竹兮被查](https://so.toutiao.com/search?keyword=山东济南市政府原参事孙竹兮被查)
-1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
 1. [村干部埋水泥桩拦路报复村民](https://so.toutiao.com/search?keyword=村干部埋水泥桩拦路报复村民)
 1. [原阿里董事会主席张勇加入晨壹基金](https://so.toutiao.com/search?keyword=原阿里董事会主席张勇加入晨壹基金)
 1. [美军拟在菲律宾北部建港口意欲何为](https://so.toutiao.com/search?keyword=美军拟在菲律宾北部建港口意欲何为)
@@ -94,12 +107,10 @@
 1. [凤凰传奇4月20日济南演唱会取消](https://so.toutiao.com/search?keyword=凤凰传奇4月20日济南演唱会取消)
 1. [中国美债持仓重回8000亿美元以下](https://so.toutiao.com/search?keyword=中国美债持仓重回8000亿美元以下)
 1. [美军加速测试潜射高超导弹](https://so.toutiao.com/search?keyword=美军加速测试潜射高超导弹)
-1. [2名医学生先后自杀？校方回应](https://so.toutiao.com/search?keyword=2名医学生先后自杀？校方回应)
 1. [奈飞版《三体》剧集今日开播](https://so.toutiao.com/search?keyword=奈飞版《三体》剧集今日开播)
 1. [女子上班伸懒腰遇翻车](https://so.toutiao.com/search?keyword=女子上班伸懒腰遇翻车)
 1. [朝鲜新型高超音速导弹相关试验成功](https://so.toutiao.com/search?keyword=朝鲜新型高超音速导弹相关试验成功)
 1. [小孩哥背一书包“孤寡”回家](https://so.toutiao.com/search?keyword=小孩哥背一书包“孤寡”回家)
-1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
 1. [央行：法定存款准备金率有下降空间](https://so.toutiao.com/search?keyword=央行：法定存款准备金率有下降空间)
 1. [《欢乐颂5》何悯鸿被拉黑](https://so.toutiao.com/search?keyword=《欢乐颂5》何悯鸿被拉黑)
 1. [对13岁性侵者不予刑罚 困窘如何打破](https://so.toutiao.com/search?keyword=对13岁性侵者不予刑罚+困窘如何打破)
