--- a/archives/toutiao-search/2024-03-21.md
+++ b/archives/toutiao-search/2024-03-21.md
@@ -1,63 +1,75 @@
 # 2024-03-21
 
-共 308 条
+共 318 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 21 2024 21:04:51 GMT+0800 (China Standard Time) -->
-1. [女孩从30楼落下被气垫接住奇迹生还](https://so.toutiao.com/search?keyword=女孩从30楼落下被气垫接住奇迹生还)
+<!-- 最后更新时间 Thu Mar 21 2024 22:00:43 GMT+0800 (China Standard Time) -->
+1. [男子横穿马路被连撞两次](https://so.toutiao.com/search?keyword=男子横穿马路被连撞两次)
 1. [菲方34人非法登上铁线礁 中方回应](https://so.toutiao.com/search?keyword=菲方34人非法登上铁线礁+中方回应)
-1. [用课本封面的方式打开春耕画卷](https://so.toutiao.com/search?keyword=用课本封面的方式打开春耕画卷)
+1. [经济“新动能”投资增长势头良好](https://so.toutiao.com/search?keyword=经济“新动能”投资增长势头良好)
 1. [乌首都遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=乌首都遭俄军数枚高超音速导弹袭击)
-1. [男子过马路不看路被来车连撞两次](https://so.toutiao.com/search?keyword=男子过马路不看路被来车连撞两次)
+1. [英国2名空姐嘲讽中国人被开除](https://so.toutiao.com/search?keyword=英国2名空姐嘲讽中国人被开除)
+1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
+1. [俄称已消灭147名抵乌的法国雇佣兵](https://so.toutiao.com/search?keyword=俄称已消灭147名抵乌的法国雇佣兵)
+1. [国足vs新加坡](https://so.toutiao.com/search?keyword=国足vs新加坡)
 1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
 1. [预制菜不允许添加防腐剂](https://so.toutiao.com/search?keyword=预制菜不允许添加防腐剂)
-1. [国足vs新加坡](https://so.toutiao.com/search?keyword=国足vs新加坡)
-1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
-1. [亚洲最大苹果旗舰店开幕现场](https://so.toutiao.com/search?keyword=亚洲最大苹果旗舰店开幕现场)
-1. [遇害学生父亲尸检反复念叨：儿啊别怕](https://so.toutiao.com/search?keyword=遇害学生父亲尸检反复念叨：儿啊别怕)
-1. [女子问丈夫要2万生活费被拒后争执](https://so.toutiao.com/search?keyword=女子问丈夫要2万生活费被拒后争执)
-1. [媒体人辟谣“3名初中生嫌犯改过年龄”](https://so.toutiao.com/search?keyword=媒体人辟谣“3名初中生嫌犯改过年龄”)
 1. [医院称2名医学生先后自杀情况属实](https://so.toutiao.com/search?keyword=医院称2名医学生先后自杀情况属实)
-1. [英国2名空姐嘲讽中国人被开除](https://so.toutiao.com/search?keyword=英国2名空姐嘲讽中国人被开除)
-1. [俄称已消灭147名抵乌的法国雇佣兵](https://so.toutiao.com/search?keyword=俄称已消灭147名抵乌的法国雇佣兵)
-1. [6岁女孩确诊甲状腺癌](https://so.toutiao.com/search?keyword=6岁女孩确诊甲状腺癌)
-1. [苹果新店赠品礼盒二手价卖到399元](https://so.toutiao.com/search?keyword=苹果新店赠品礼盒二手价卖到399元)
+1. [杜海涛爆改](https://so.toutiao.com/search?keyword=杜海涛爆改)
+1. [媒体人辟谣“3名初中生嫌犯改过年龄”](https://so.toutiao.com/search?keyword=媒体人辟谣“3名初中生嫌犯改过年龄”)
+1. [亚洲最大苹果旗舰店开幕现场](https://so.toutiao.com/search?keyword=亚洲最大苹果旗舰店开幕现场)
 1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
-1. [男子收到陌生快递 扫码被骗32万](https://so.toutiao.com/search?keyword=男子收到陌生快递+扫码被骗32万)
-1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
-1. [主持人评景区禁止自驾车：开始明抢](https://so.toutiao.com/search?keyword=主持人评景区禁止自驾车：开始明抢)
-1. [螺蛳粉被曝用增臭剂？多家品牌回应](https://so.toutiao.com/search?keyword=螺蛳粉被曝用增臭剂？多家品牌回应)
-1. [交通局回应公路中间建牌楼：会拆除](https://so.toutiao.com/search?keyword=交通局回应公路中间建牌楼：会拆除)
 1. [媒体：警惕医学生自杀出现维特效应](https://so.toutiao.com/search?keyword=媒体：警惕医学生自杀出现维特效应)
-1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
-1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
-1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
-1. [宝马新世代X概念车亮相](https://so.toutiao.com/search?keyword=宝马新世代X概念车亮相)
-1. [吴彦祖晒与贾玲合影](https://so.toutiao.com/search?keyword=吴彦祖晒与贾玲合影)
-1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
 1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
-1. [女子公厕废纸篓发现弃婴](https://so.toutiao.com/search?keyword=女子公厕废纸篓发现弃婴)
-1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
-1. [费翔为拍摄新电影把胡子刮了](https://so.toutiao.com/search?keyword=费翔为拍摄新电影把胡子刮了)
-1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
-1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
-1. [19岁救人溺亡小伙家属谢绝捐赠募捐](https://so.toutiao.com/search?keyword=19岁救人溺亡小伙家属谢绝捐赠募捐)
-1. [美大使称对华芯片禁令不谈判不妥协](https://so.toutiao.com/search?keyword=美大使称对华芯片禁令不谈判不妥协)
+1. [交通局回应公路中间建牌楼：会拆除](https://so.toutiao.com/search?keyword=交通局回应公路中间建牌楼：会拆除)
+1. [男子收到陌生快递 扫码被骗32万](https://so.toutiao.com/search?keyword=男子收到陌生快递+扫码被骗32万)
+1. [“王婆说媒”3大名场面出圈](https://so.toutiao.com/search?keyword=“王婆说媒”3大名场面出圈)
+1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
+1. [女子问丈夫要2万生活费被拒后争执](https://so.toutiao.com/search?keyword=女子问丈夫要2万生活费被拒后争执)
+1. [女生回应在王婆说媒现场亲小伙](https://so.toutiao.com/search?keyword=女生回应在王婆说媒现场亲小伙)
+1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
+1. [美称藏南地区系印度领土 中方驳斥](https://so.toutiao.com/search?keyword=美称藏南地区系印度领土+中方驳斥)
+1. [吴彦祖晒与贾玲合影](https://so.toutiao.com/search?keyword=吴彦祖晒与贾玲合影)
 1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
+1. [女子公厕废纸篓发现弃婴](https://so.toutiao.com/search?keyword=女子公厕废纸篓发现弃婴)
+1. [费翔为拍摄新电影把胡子刮了](https://so.toutiao.com/search?keyword=费翔为拍摄新电影把胡子刮了)
+1. [6岁女孩确诊甲状腺癌](https://so.toutiao.com/search?keyword=6岁女孩确诊甲状腺癌)
+1. [洛阳一高校里锦鲤跃出湖面](https://so.toutiao.com/search?keyword=洛阳一高校里锦鲤跃出湖面)
+1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
+1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
+1. [螺蛳粉被曝用增臭剂？多家品牌回应](https://so.toutiao.com/search?keyword=螺蛳粉被曝用增臭剂？多家品牌回应)
+1. [美大使称对华芯片禁令不谈判不妥协](https://so.toutiao.com/search?keyword=美大使称对华芯片禁令不谈判不妥协)
 1. [摩托误入高速 交警吐槽开140追不上](https://so.toutiao.com/search?keyword=摩托误入高速+交警吐槽开140追不上)
+1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
+1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
+1. [学院回应情侣厕所产子丢垃圾桶](https://so.toutiao.com/search?keyword=学院回应情侣厕所产子丢垃圾桶)
+1. [苹果新店赠品礼盒二手价卖到399元](https://so.toutiao.com/search?keyword=苹果新店赠品礼盒二手价卖到399元)
+1. [赵丽颖林更新玩接龙游戏](https://so.toutiao.com/search?keyword=赵丽颖林更新玩接龙游戏)
+1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
+1. [赵丽颖林更新拍与凤行大结局哭懵了](https://so.toutiao.com/search?keyword=赵丽颖林更新拍与凤行大结局哭懵了)
+1. [媒体：淀粉肠塌房一禁了之不是办法](https://so.toutiao.com/search?keyword=媒体：淀粉肠塌房一禁了之不是办法)
+1. [雷军展示小米SU7](https://so.toutiao.com/search?keyword=雷军展示小米SU7)
+1. [国足历届世预赛战绩](https://so.toutiao.com/search?keyword=国足历届世预赛战绩)
+1. [主持人评景区禁止自驾车：开始明抢](https://so.toutiao.com/search?keyword=主持人评景区禁止自驾车：开始明抢)
+1. [探访以军撤离后的加沙南部小镇](https://so.toutiao.com/search?keyword=探访以军撤离后的加沙南部小镇)
+1. [儿子运动步数为0 母亲报警救其一命](https://so.toutiao.com/search?keyword=儿子运动步数为0+母亲报警救其一命)
+1. [Xiaomi Civi 4 Pro发布](https://so.toutiao.com/search?keyword=Xiaomi+Civi 4 Pro发布)
+1. [女孩从30楼落下被气垫接住奇迹生还](https://so.toutiao.com/search?keyword=女孩从30楼落下被气垫接住奇迹生还)
+1. [用课本封面的方式打开春耕画卷](https://so.toutiao.com/search?keyword=用课本封面的方式打开春耕画卷)
+1. [男子过马路不看路被来车连撞两次](https://so.toutiao.com/search?keyword=男子过马路不看路被来车连撞两次)
+1. [遇害学生父亲尸检反复念叨：儿啊别怕](https://so.toutiao.com/search?keyword=遇害学生父亲尸检反复念叨：儿啊别怕)
+1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
+1. [宝马新世代X概念车亮相](https://so.toutiao.com/search?keyword=宝马新世代X概念车亮相)
+1. [紫色版小米SU7闪现武汉大学](https://so.toutiao.com/search?keyword=紫色版小米SU7闪现武汉大学)
+1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
+1. [19岁救人溺亡小伙家属谢绝捐赠募捐](https://so.toutiao.com/search?keyword=19岁救人溺亡小伙家属谢绝捐赠募捐)
 1. [新郎被朋友捆电线杆上倒啤酒酱油](https://so.toutiao.com/search?keyword=新郎被朋友捆电线杆上倒啤酒酱油)
 1. [俄多管火箭炮摧毁乌军阵地画面曝光](https://so.toutiao.com/search?keyword=俄多管火箭炮摧毁乌军阵地画面曝光)
-1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
 1. [汽车侧翻司机被困 3名少年奔跑救人](https://so.toutiao.com/search?keyword=汽车侧翻司机被困+3名少年奔跑救人)
 1. [女生戴录音器找开封王婆求姻缘被拒](https://so.toutiao.com/search?keyword=女生戴录音器找开封王婆求姻缘被拒)
-1. [美称藏南地区系印度领土 中方驳斥](https://so.toutiao.com/search?keyword=美称藏南地区系印度领土+中方驳斥)
-1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
-1. [媒体：淀粉肠塌房一禁了之不是办法](https://so.toutiao.com/search?keyword=媒体：淀粉肠塌房一禁了之不是办法)
-1. [赵丽颖林更新拍与凤行大结局哭懵了](https://so.toutiao.com/search?keyword=赵丽颖林更新拍与凤行大结局哭懵了)
 1. [国足vs新加坡比分预测](https://so.toutiao.com/search?keyword=国足vs新加坡比分预测)
 1. [重庆垫江辟谣以补贴形式招录公务员](https://so.toutiao.com/search?keyword=重庆垫江辟谣以补贴形式招录公务员)
 1. [《追风者》魏若来一招拿下offer](https://so.toutiao.com/search?keyword=《追风者》魏若来一招拿下offer)
-1. [学院回应情侣厕所产子丢垃圾桶](https://so.toutiao.com/search?keyword=学院回应情侣厕所产子丢垃圾桶)
 1. [足协官方提前显示国足0-0新加坡](https://so.toutiao.com/search?keyword=足协官方提前显示国足0-0新加坡)
 1. [台退将谈台军将在金门实弹射击](https://so.toutiao.com/search?keyword=台退将谈台军将在金门实弹射击)
 1. [柳州螺蛳粉协会秘书长谈增臭剂](https://so.toutiao.com/search?keyword=柳州螺蛳粉协会秘书长谈增臭剂)
@@ -71,9 +83,7 @@
 1. [“重庆姐弟坠楼案”孩子母亲患癌](https://so.toutiao.com/search?keyword=“重庆姐弟坠楼案”孩子母亲患癌)
 1. [3名掉化粪池离世小孩为幼儿园学生](https://so.toutiao.com/search?keyword=3名掉化粪池离世小孩为幼儿园学生)
 1. [成都官方辟谣高中老师殴打学生](https://so.toutiao.com/search?keyword=成都官方辟谣高中老师殴打学生)
-1. [儿子运动步数为0 母亲报警救其一命](https://so.toutiao.com/search?keyword=儿子运动步数为0+母亲报警救其一命)
 1. [央行三周内两次提及降准仍有空间](https://so.toutiao.com/search?keyword=央行三周内两次提及降准仍有空间)
-1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
 1. [《谢谢你温暖我》聚焦渐冻症](https://so.toutiao.com/search?keyword=《谢谢你温暖我》聚焦渐冻症)
 1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
 1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
