--- a/archives/toutiao-search/2024-03-22.md
+++ b/archives/toutiao-search/2024-03-22.md
@@ -1,57 +1,75 @@
 # 2024-03-22
 
-共 109 条
+共 122 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Mar 22 2024 07:00:52 GMT+0800 (China Standard Time) -->
-1. [国足2-2战平新加坡](https://so.toutiao.com/search?keyword=国足2-2战平新加坡)
-1. [媒体人热议国足平新加坡：无语至极](https://so.toutiao.com/search?keyword=媒体人热议国足平新加坡：无语至极)
+<!-- 最后更新时间 Fri Mar 22 2024 08:24:45 GMT+0800 (China Standard Time) -->
+1. [张琳芃：是时候结束国家队生涯了](https://so.toutiao.com/search?keyword=张琳芃：是时候结束国家队生涯了)
+1. [女子给每个不送上门的快递员打电话](https://so.toutiao.com/search?keyword=女子给每个不送上门的快递员打电话)
 1. [经济“新动能”投资增长势头良好](https://so.toutiao.com/search?keyword=经济“新动能”投资增长势头良好)
-1. [乌首都遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=乌首都遭俄军数枚高超音速导弹袭击)
-1. [亚洲最大苹果旗舰店开幕现场](https://so.toutiao.com/search?keyword=亚洲最大苹果旗舰店开幕现场)
+1. [热议国足平新加坡：无语至极](https://so.toutiao.com/search?keyword=热议国足平新加坡：无语至极)
+1. [网飞版《三体》好看吗](https://so.toutiao.com/search?keyword=网飞版《三体》好看吗)
+1. [北大研究生立遗嘱财产全部赠母校](https://so.toutiao.com/search?keyword=北大研究生立遗嘱财产全部赠母校)
+1. [国足2-2战平新加坡](https://so.toutiao.com/search?keyword=国足2-2战平新加坡)
+1. [引爆AI概念的KiMi是什么来头](https://so.toutiao.com/search?keyword=引爆AI概念的KiMi是什么来头)
+1. [开封王婆：想给孩子做点事](https://so.toutiao.com/search?keyword=开封王婆：想给孩子做点事)
 1. [曲婉婷父女现身国外街头](https://so.toutiao.com/search?keyword=曲婉婷父女现身国外街头)
+1. [亚洲最大苹果旗舰店开幕现场](https://so.toutiao.com/search?keyword=亚洲最大苹果旗舰店开幕现场)
 1. [英国2名空姐嘲讽中国人被开除](https://so.toutiao.com/search?keyword=英国2名空姐嘲讽中国人被开除)
-1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
-1. [苹果新店赠品礼盒二手价卖到399元](https://so.toutiao.com/search?keyword=苹果新店赠品礼盒二手价卖到399元)
-1. [俄称已消灭147名抵乌的法国雇佣兵](https://so.toutiao.com/search?keyword=俄称已消灭147名抵乌的法国雇佣兵)
-1. [菲方34人非法登上铁线礁 中方回应](https://so.toutiao.com/search?keyword=菲方34人非法登上铁线礁+中方回应)
-1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
 1. [媒体人辟谣“3名初中生嫌犯改过年龄”](https://so.toutiao.com/search?keyword=媒体人辟谣“3名初中生嫌犯改过年龄”)
-1. [医院称2名医学生先后自杀情况属实](https://so.toutiao.com/search?keyword=医院称2名医学生先后自杀情况属实)
+1. [苹果新店赠品礼盒二手价卖到399元](https://so.toutiao.com/search?keyword=苹果新店赠品礼盒二手价卖到399元)
+1. [基辅遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=基辅遭俄军数枚高超音速导弹袭击)
 1. [央媒：校园霸凌出现高危苗头](https://so.toutiao.com/search?keyword=央媒：校园霸凌出现高危苗头)
-1. [男子横穿马路被连撞两次](https://so.toutiao.com/search?keyword=男子横穿马路被连撞两次)
 1. [预制菜不允许添加防腐剂](https://so.toutiao.com/search?keyword=预制菜不允许添加防腐剂)
-1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
-1. [恒大地产的财务造假有多严重](https://so.toutiao.com/search?keyword=恒大地产的财务造假有多严重)
-1. [天水高颜值交警出圈](https://so.toutiao.com/search?keyword=天水高颜值交警出圈)
-1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
-1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
-1. [郭正亮：我主张两岸要和平统一](https://so.toutiao.com/search?keyword=郭正亮：我主张两岸要和平统一)
+1. [秦始皇帝陵1号墓取得重大考古收获](https://so.toutiao.com/search?keyword=秦始皇帝陵1号墓取得重大考古收获)
+1. [菲方34人非法登上铁线礁 中方回应](https://so.toutiao.com/search?keyword=菲方34人非法登上铁线礁+中方回应)
 1. [开封王婆说媒现场有多火](https://so.toutiao.com/search?keyword=开封王婆说媒现场有多火)
+1. [评论员谈覃辉3宗罪：在美输得剩裤衩](https://so.toutiao.com/search?keyword=评论员谈覃辉3宗罪：在美输得剩裤衩)
+1. [天水高颜值交警出圈](https://so.toutiao.com/search?keyword=天水高颜值交警出圈)
+1. [媒体评用中考投档震慑校园欺凌者](https://so.toutiao.com/search?keyword=媒体评用中考投档震慑校园欺凌者)
+1. [男子横穿马路被连撞两次](https://so.toutiao.com/search?keyword=男子横穿马路被连撞两次)
+1. [越南国家主席辞职背后浮出大案](https://so.toutiao.com/search?keyword=越南国家主席辞职背后浮出大案)
+1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
+1. [多人三亚潜水时被摘下面罩强行推销](https://so.toutiao.com/search?keyword=多人三亚潜水时被摘下面罩强行推销)
+1. [俄称已消灭147名抵乌的法国雇佣兵](https://so.toutiao.com/search?keyword=俄称已消灭147名抵乌的法国雇佣兵)
+1. [医院称2名医学生先后自杀情况属实](https://so.toutiao.com/search?keyword=医院称2名医学生先后自杀情况属实)
+1. [玲花回应凤凰传奇演唱会取消](https://so.toutiao.com/search?keyword=玲花回应凤凰传奇演唱会取消)
+1. [郭正亮：我主张两岸要和平统一](https://so.toutiao.com/search?keyword=郭正亮：我主张两岸要和平统一)
+1. [女子因摔倒致公交急刹被索赔13.5万](https://so.toutiao.com/search?keyword=女子因摔倒致公交急刹被索赔13.5万)
+1. [女子问丈夫要2万生活费被拒后争执](https://so.toutiao.com/search?keyword=女子问丈夫要2万生活费被拒后争执)
+1. [美称藏南地区系印度领土 中方驳斥](https://so.toutiao.com/search?keyword=美称藏南地区系印度领土+中方驳斥)
+1. [电视剧《三体》周年纪念版开播](https://so.toutiao.com/search?keyword=电视剧《三体》周年纪念版开播)
+1. [陈建斌回应成为热门歌手](https://so.toutiao.com/search?keyword=陈建斌回应成为热门歌手)
+1. [男子带鹦鹉第一次外出成了最后一次](https://so.toutiao.com/search?keyword=男子带鹦鹉第一次外出成了最后一次)
+1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
+1. [赵丽颖林更新拍与凤行大结局哭懵了](https://so.toutiao.com/search?keyword=赵丽颖林更新拍与凤行大结局哭懵了)
+1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
+1. [交通局回应公路中间建牌楼：会拆除](https://so.toutiao.com/search?keyword=交通局回应公路中间建牌楼：会拆除)
+1. [山西吕梁多名学生在厕所内被霸凌](https://so.toutiao.com/search?keyword=山西吕梁多名学生在厕所内被霸凌)
+1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
+1. [6岁女孩确诊甲状腺癌](https://so.toutiao.com/search?keyword=6岁女孩确诊甲状腺癌)
+1. [女生回应在王婆说媒现场亲小伙](https://so.toutiao.com/search?keyword=女生回应在王婆说媒现场亲小伙)
+1. [吴彦祖晒与贾玲合影](https://so.toutiao.com/search?keyword=吴彦祖晒与贾玲合影)
+1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
+1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
+1. [恒大地产的财务造假有多严重](https://so.toutiao.com/search?keyword=恒大地产的财务造假有多严重)
+1. [江西高速回应禁止特斯拉上高速](https://so.toutiao.com/search?keyword=江西高速回应禁止特斯拉上高速)
+1. [媒体人热议国足平新加坡：无语至极](https://so.toutiao.com/search?keyword=媒体人热议国足平新加坡：无语至极)
+1. [乌首都遭俄军数枚高超音速导弹袭击](https://so.toutiao.com/search?keyword=乌首都遭俄军数枚高超音速导弹袭击)
+1. [呼北高速14死车祸伤者家属发声](https://so.toutiao.com/search?keyword=呼北高速14死车祸伤者家属发声)
 1. [台退将谈台军将在金门实弹射击](https://so.toutiao.com/search?keyword=台退将谈台军将在金门实弹射击)
 1. [越南国家主席为何三年换了三个](https://so.toutiao.com/search?keyword=越南国家主席为何三年换了三个)
-1. [美称藏南地区系印度领土 中方驳斥](https://so.toutiao.com/search?keyword=美称藏南地区系印度领土+中方驳斥)
-1. [储殷：普京赢得大选释放三个信号](https://so.toutiao.com/search?keyword=储殷：普京赢得大选释放三个信号)
 1. [赵安吉溺亡时处于醉酒状态](https://so.toutiao.com/search?keyword=赵安吉溺亡时处于醉酒状态)
-1. [6岁女孩确诊甲状腺癌](https://so.toutiao.com/search?keyword=6岁女孩确诊甲状腺癌)
-1. [电视剧《三体》周年纪念版开播](https://so.toutiao.com/search?keyword=电视剧《三体》周年纪念版开播)
 1. [湖北十堰一家5代守护红军墓88载](https://so.toutiao.com/search?keyword=湖北十堰一家5代守护红军墓88载)
-1. [曝成龙剧组拍戏封路与居民起争执](https://so.toutiao.com/search?keyword=曝成龙剧组拍戏封路与居民起争执)
 1. [曝小孩在店里偷东西 家长语出惊人](https://so.toutiao.com/search?keyword=曝小孩在店里偷东西+家长语出惊人)
 1. [俄方：消灭乌境内法军“并非难事”](https://so.toutiao.com/search?keyword=俄方：消灭乌境内法军“并非难事”)
 1. [多种疾病与睡眠有关](https://so.toutiao.com/search?keyword=多种疾病与睡眠有关)
-1. [贾玲现身好莱坞片场](https://so.toutiao.com/search?keyword=贾玲现身好莱坞片场)
-1. [小杨哥鞠躬致歉梅菜扣肉事件](https://so.toutiao.com/search?keyword=小杨哥鞠躬致歉梅菜扣肉事件)
 1. [费翔为拍摄新电影把胡子刮了](https://so.toutiao.com/search?keyword=费翔为拍摄新电影把胡子刮了)
-1. [秦始皇帝陵1号墓取得重大考古收获](https://so.toutiao.com/search?keyword=秦始皇帝陵1号墓取得重大考古收获)
 1. [俄媒：乌克兰外国雇佣兵近半数阵亡](https://so.toutiao.com/search?keyword=俄媒：乌克兰外国雇佣兵近半数阵亡)
 1. [乌前部长拉援助：打赢将得到俄油气](https://so.toutiao.com/search?keyword=乌前部长拉援助：打赢将得到俄油气)
-1. [女子问丈夫要2万生活费被拒后争执](https://so.toutiao.com/search?keyword=女子问丈夫要2万生活费被拒后争执)
-1. [男子带鹦鹉第一次外出成了最后一次](https://so.toutiao.com/search?keyword=男子带鹦鹉第一次外出成了最后一次)
 1. [这些睡眠误区不要踩](https://so.toutiao.com/search?keyword=这些睡眠误区不要踩)
 1. [美大使称对华芯片禁令不谈判不妥协](https://so.toutiao.com/search?keyword=美大使称对华芯片禁令不谈判不妥协)
 1. [诈骗团伙将20元产品4980元卖给老人](https://so.toutiao.com/search?keyword=诈骗团伙将20元产品4980元卖给老人)
-1. [城管制止商贩 双方只动嘴不动手](https://so.toutiao.com/search?keyword=城管制止商贩+双方只动嘴不动手)
 1. [媒体：警惕医学生自杀出现维特效应](https://so.toutiao.com/search?keyword=媒体：警惕医学生自杀出现维特效应)
 1. [女子公厕废纸篓发现弃婴](https://so.toutiao.com/search?keyword=女子公厕废纸篓发现弃婴)
 1. [武氏映春出任越南国家代主席](https://so.toutiao.com/search?keyword=武氏映春出任越南国家代主席)
@@ -60,10 +78,8 @@
 1. [美军拟在菲律宾北部建港口意欲何为](https://so.toutiao.com/search?keyword=美军拟在菲律宾北部建港口意欲何为)
 1. [网友打赏千元看大尺度直播后报警](https://so.toutiao.com/search?keyword=网友打赏千元看大尺度直播后报警)
 1. [西藏人大原副主任纪国刚贪4398万受审](https://so.toutiao.com/search?keyword=西藏人大原副主任纪国刚贪4398万受审)
-1. [吴彦祖晒与贾玲合影](https://so.toutiao.com/search?keyword=吴彦祖晒与贾玲合影)
 1. [四川3名小孩玩耍时掉入化粪池离世](https://so.toutiao.com/search?keyword=四川3名小孩玩耍时掉入化粪池离世)
 1. [美国务院妄称藏南地区是印度一部分](https://so.toutiao.com/search?keyword=美国务院妄称藏南地区是印度一部分)
-1. [乌议员：马克龙态度坚决正考虑派兵](https://so.toutiao.com/search?keyword=乌议员：马克龙态度坚决正考虑派兵)
 1. [吉尔吉斯斯坦发现跨境走私隧道](https://so.toutiao.com/search?keyword=吉尔吉斯斯坦发现跨境走私隧道)
 1. [许家印被罚背后是购房者心酸史](https://so.toutiao.com/search?keyword=许家印被罚背后是购房者心酸史)
 1. [在乌危机问题上中方将继续劝和促谈](https://so.toutiao.com/search?keyword=在乌危机问题上中方将继续劝和促谈)
@@ -96,9 +112,7 @@
 1. [开封王婆回应爆火：没有剧本](https://so.toutiao.com/search?keyword=开封王婆回应爆火：没有剧本)
 1. [“王婆说媒”3大名场面出圈](https://so.toutiao.com/search?keyword=“王婆说媒”3大名场面出圈)
 1. [摩托误入高速 交警吐槽开140追不上](https://so.toutiao.com/search?keyword=摩托误入高速+交警吐槽开140追不上)
-1. [女子因摔倒致公交急刹被索赔13.5万](https://so.toutiao.com/search?keyword=女子因摔倒致公交急刹被索赔13.5万)
 1. [奥沙利文爆冷无缘世界公开赛8强](https://so.toutiao.com/search?keyword=奥沙利文爆冷无缘世界公开赛8强)
-1. [陈建斌回应成为热门歌手](https://so.toutiao.com/search?keyword=陈建斌回应成为热门歌手)
 1. [男子为徒步爬泰山把身份证存半山腰](https://so.toutiao.com/search?keyword=男子为徒步爬泰山把身份证存半山腰)
 1. [螺蛳粉还能放心吃吗](https://so.toutiao.com/search?keyword=螺蛳粉还能放心吃吗)
 1. [小伙跳江轻生 6旬老者下水救人](https://so.toutiao.com/search?keyword=小伙跳江轻生+6旬老者下水救人)
@@ -109,7 +123,6 @@
 1. [洛阳稀有“网红”绿牡丹春柳开花](https://so.toutiao.com/search?keyword=洛阳稀有“网红”绿牡丹春柳开花)
 1. [洛阳一高校里锦鲤跃出湖面](https://so.toutiao.com/search?keyword=洛阳一高校里锦鲤跃出湖面)
 1. [董勇演绎范总和警察喝咖啡的区别](https://so.toutiao.com/search?keyword=董勇演绎范总和警察喝咖啡的区别)
-1. [女生回应在王婆说媒现场亲小伙](https://so.toutiao.com/search?keyword=女生回应在王婆说媒现场亲小伙)
 1. [雅江山火火场仍有断续火线](https://so.toutiao.com/search?keyword=雅江山火火场仍有断续火线)
 1. [中医专业大学生摆摊9块9元推拿](https://so.toutiao.com/search?keyword=中医专业大学生摆摊9块9元推拿)
 1. [拉脱维亚：北约正准备转入战时经济](https://so.toutiao.com/search?keyword=拉脱维亚：北约正准备转入战时经济)
